--- a/branches/actionbarsherlock/res/layout/drug_view.xml
+++ b/branches/actionbarsherlock/res/layout/drug_view.xml
@@ -194,7 +194,7 @@
 			    android:gravity="center"
 			    android:textAppearance="?android:attr/textAppearanceSmall"
 			    
-			    android:background="@drawable/generic_background"
+			    android:background="?attr/selectableItemBackground"
 			    android:clickable="true"
 			    android:onClick="onLowSupplyIndicatorClicked"
 			    rxdroid:onLongClick="onSupplyMonitorLongClick"
@@ -208,7 +208,7 @@
 		  	    android:layout_width="wrap_content"
 		  	    android:layout_height="wrap_content"
 		  	    android:layout_gravity="center"
-		  	    android:background="@drawable/generic_background"		 
+		  	    android:background="?attr/selectableItemBackground"		 
 		  	>		  	    
 		  	
 			  	<ImageView android:id="@+id/img_drug_menu"
